# jira-testplan-bot

./: .env.example  .gitignore  .neon  Dockerfile  LICENSE  PROMPT_IMPROVEMENTS.md  README.md  TESTING_GUIDE.md  claude_desktop_config.example.json  docker-compose.yml  example_usage.py  install.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  wow-ideas.md
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0ccd3713f19e_add_bug_analyses_table.py  a1b2c3d4e5f6_add_posted_to_jira_to_plans.py  b2c3d4e5f6a7_add_ticket_walkthroughs.py  c3d4e5f6a7b8_add_test_plan_progress.py  e3ee99c0ab66_initial_schema.py  e5f6a7b8c9d0_walkthrough_screenshots_list.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py
app/services/: __init__.py  jira_service.py  llm_service.py
app/utils/: formatter.py
docs/: MCP_SERVER.md  PROMPT_IMPROVEMENTS.md  TESTING_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js
src/app/: adf_parser.py  bug_lens_routes.py  code_grounding_critic.py  config.py  confluence_client.py  description_analyzer.py  figma_client.py  fix_scope_critic.py  github_client.py  (+12 more)
tests/: __init__.py  run_tests.py  test_ac_coverage.py  test_adf_parser.py  test_api_mock.py  test_bounce_detection.py  test_bug_lens.py  test_code_grounding_critic.py  test_fix_scope_critic.py  test_grounding_critic.py  test_jira_browser.py  test_jira_comments.py  test_llm.py  test_manual.py  test_pr_loom_harvest.py  test_seam_extractor.py  test_slack_client.py  test_workflow_comments.py
(+63 files in other folders)
